monitoring/prometheus/60-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.internal.czcx.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 80
  tls:
    - secretName: prometheus-internal-tls-prod-cert
      hosts:
        - prometheus.internal.czcx.cc
